--- a/vue/public/index.html
+++ b/vue/public/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <script src="https://kit.fontawesome.com/a6a09db984.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>final-vue-capstone-seed</title>
+    <link rel="icon" href="<%= BASE_URL %>cropped-logo.png">
+    <title>Planner Ahead</title>
   </head>
   <body>
     <noscript>
